--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,9 @@ on:
 
 jobs:
   lint:
-    timeout-minutes: 15
+    timeout-minutes: 30
     name: lint
-    runs-on: ${{ github.repository == 'stainless-sdks/unifieddatalibrary-java' && 'depot-ubuntu-24.04' || 'ubuntu-latest' }}
+    runs-on: ${{ github.repository == 'stainless-sdks/unifieddatalibrary-java' && 'depot-ubuntu-24.04-16' || 'ubuntu-latest' }}
     if: github.event_name == 'push' || github.event.pull_request.head.repo.fork
 
     steps:
@@ -37,9 +37,9 @@ jobs:
       - name: Run lints
         run: ./scripts/lint
   test:
-    timeout-minutes: 15
+    timeout-minutes: 30
     name: test
-    runs-on: ${{ github.repository == 'stainless-sdks/unifieddatalibrary-java' && 'depot-ubuntu-24.04' || 'ubuntu-latest' }}
+    runs-on: ${{ github.repository == 'stainless-sdks/unifieddatalibrary-java' && 'depot-ubuntu-24.04-16' || 'ubuntu-latest' }}
     if: github.event_name == 'push' || github.event.pull_request.head.repo.fork
     steps:
       - uses: actions/checkout@v4
