--- a/.github/workflows/publish-sonatype.yml
+++ b/.github/workflows/publish-sonatype.yml
@@ -11,7 +11,8 @@ on:
 jobs:
   publish:
     name: publish
-    runs-on: ubuntu-latest
+    runs-on: 
+    - self-hosted
 
     steps:
       - uses: actions/checkout@v4
